# sdl-music-loop

./: .gitmodules  CMakeLists.txt  README.md  audio_device.cpp  audio_device.hpp  audio_device_scene.cpp  audio_device_scene.hpp  buffered_source.cpp  buffered_source.hpp  flac_source.cpp  flac_source.hpp  main.cpp  menu_scene.cpp  menu_scene.hpp  mixer_scene.cpp  mixer_scene.hpp  mp3_source.cpp  mp3_source.hpp  music.cpp  music.hpp  ogg_source.cpp  ogg_source.hpp  pcm_source.hpp  sample_buffer.cpp  sample_buffer.hpp  scene.cpp  scene.hpp  vcpkg.json  vorbis_source.cpp  vorbis_source.hpp  wave_source.cpp  wave_source.hpp  wavpack_source.cpp  wavpack_source.hpp
